--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "express": "^4.15.3",
-    "next": "beta",
+    "next": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
